Updated the .gitignore file

--- a/exercise_to_complete_for_day_1/.gitignore
+++ b/exercise_to_complete_for_day_1/.gitignore
@@ -1,11 +1,8 @@
 obj
 bin
 .svn
-_ReSharper.*
-*.csproj.user
-*.resharper.user
-*.ReSharper.user
-*.Resharper.user
+_[Rr]e[Ss]harper.solution/
+*.[Rr]e[Ss]harper*
 *.resharper
 *.suo
 *.cache
@@ -13,7 +10,11 @@ _ReSharper.*
 *.sql
 *.swp
 *.swo
+*.csproj.user
 /artifacts
-/product/config/app.config.vista
-/product/config/app.config.xp
-
+app.config.xp
+app.config.vista
+[Ww]eb.config
+local_properties.rb
+hibernate.cfg.xml
+log4net.config.xml
